hlsdemux: fix wrong usage of GST_ELEMENT_ERROR macros and compilation on NetBSD

https://bugzilla.gnome.org/show_bug.cgi?id=655319